Updated build number

--- a/charts/categoryservice/values.yaml
+++ b/charts/categoryservice/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 3
 image:
   repository: mgkaiser/categoryservice
   pullPolicy: Always  
-  tag: "Build-35"
+  tag: "Build-2"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -29,11 +29,11 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
-podAnnotations: {} 
+podAnnotations: {}  
 
 podLabels:
   app: webtest1
-  version: "latest"  
+  version: "Build-2"  
 
 podSecurityContext: {}
   # fsGroup: 2000
