--- a/charts/categoryservice/values.yaml
+++ b/charts/categoryservice/values.yaml
@@ -12,6 +12,8 @@ image:
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
+databaseConnectString: ""
+sharedSecretsEnabled: false
 
 environment: Development
 log:
