--- a/charts/categoryservice/templates/secrets.yaml
+++ b/charts/categoryservice/templates/secrets.yaml
@@ -2,7 +2,7 @@
 apiVersion: bitnami.com/v1alpha1
 kind: SealedSecret
 metadata:  
-  name: dbnorthwindconnection
+  name: dbnorthwindconnection-category
   namespace:  {{ .Release.Namespace }}
 spec:
   encryptedData:
@@ -12,5 +12,7 @@ spec:
     metadata:      
       name: dbnorthwindconnection
       namespace:  {{ .Release.Namespace }}
+      annotations:
+        sealedsecrets.bitnami.com/cluster-wide: "true"
     type: Opaque
 {{- end }}
