--- a/charts/categoryservice/templates/secrets.yaml
+++ b/charts/categoryservice/templates/secrets.yaml
@@ -2,7 +2,7 @@
 apiVersion: bitnami.com/v1alpha1
 kind: SealedSecret
 metadata:  
-  name: dbnorthwindconnection-category
+  name: {{ .Values.databaseSecretName }}
   namespace:  {{ .Release.Namespace }}
 spec:
   encryptedData:
@@ -10,7 +10,7 @@ spec:
   template:
     data: null
     metadata:      
-      name: dbnorthwindconnection
+      name: {{ .Values.databaseSecretName }}
       namespace:  {{ .Release.Namespace }}
       annotations:
         sealedsecrets.bitnami.com/cluster-wide: "true"
