--- a/values.yaml
+++ b/values.yaml
@@ -12,6 +12,7 @@ image:
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
+databaseSecretName: "dbnorthwindconnection-category"
 databaseConnectString: ""
 sharedSecretsEnabled: false
 
